# dj-veryfi

./: .gitignore  README  README.md  requirements.txt
dj_veryfi/: LICENSE  README.md  fields.py  setup.cfg  tests.py  veryfi.py
dj_veryfi/migrations/: 0001_initial.py
project/: requirements.txt  settings.py
project/dj_veryfi/: README  apps.py  fields.py  models.py  setup.cfg
project/project/: settings.py
