[metadata]
name = dj-veryfi
version = 0.1.3
description = Django integration for Veryfi OCR API.
long_description = file: README
url = https://github.com/tonykamillo/dj-veryfi
author = Tony Kamillo
author_email = tonykamillo@gmail.com
license = DBAD
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2.20
    veryfi >= 3.3.0
    model-bakery >= 1.12.0